# gweneditor

./: CMakeLists.txt
gweneditor/: CMakeLists.txt  gweneditor.cpp  gweneditor.h
